--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="akanksha-blossom-portfolio" />
 
     <meta property="og:title" content="akanksha-blossom-portfolio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="akanksha-blossom-portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/lovable-uploads/a.jpg" />
 
